fix: Use single animation on each .firework element and children to prevent animations mismatch (flickering)

--- a/styles/greetings.scss
+++ b/styles/greetings.scss
@@ -268,7 +268,7 @@ $cust-props: (
 	--explosion-delay: 0s;
 
 	&.animate {
-		animation-name: explosion, exp-dissolve;
+		animation-name: explosion-with-dissolve;
 
 		&::after,
 		&::before {
@@ -292,26 +292,26 @@ $cust-props: (
 	transform: translate(-50%, -50%) rotate(30deg);
 }
 
-@keyframes explosion {
-	from {
-		transform: translate(var(--x), var(--initialY));
-	}
-	60% {
-		width: var(--particle-radius);
-	}
-	to {
-		width: var(--explosion-size);
-	}
-}
+@mixin explosion-animations {
+	$dissolve-options: false true;
+	@each $opt in $dissolve-options {
+		@keyframes explosion#{if($opt, -with-dissolve, null)} {
+			from {
+				transform: translate(var(--x), var(--initialY));
+				opacity: if($opt, 1, null);
+			}
+			60% {
+				width: var(--particle-radius);
+				opacity: if($opt, 1, null);
+			}
+			to {
+				width: var(--explosion-size);
+			}
+		}
+	} 
+} 
 
-@keyframes exp-dissolve {
-	3% {
-		opacity: 1;
-	}
-	60% {
-		opacity: 1;
-	}
-}
+@include explosion-animations;
 
 /* Media queries */
 @media (max-width: 500px) {
